<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>br.unb.cic</groupId>
	<artifactId>julia-test-suite</artifactId>
	<version>1.3</version>

	<properties>
		<java.version>8</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
	</properties>

	<dependencies>
		<dependency>
			<groupId>br.unb.cic</groupId>
			<artifactId>mop-test-suite</artifactId>
			<version>1.2.5</version>
		</dependency>

		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.5</version>
			<scope>system</scope>
			<systemPath>${basedir}/lib/commons-codec-1.5.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.5</version>
			<scope>system</scope>
			<systemPath>${basedir}/lib/commons-lang-2.5.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>javamail</groupId>
			<artifactId>javamail</artifactId>
			<version>1.4.4</version>
			<scope>system</scope>
			<systemPath>${basedir}/lib/javamail-1.4.4.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>servlet-api</groupId>
			<artifactId>servlet-api</artifactId>
			<version>1</version>
			<scope>system</scope>
			<systemPath>${basedir}/lib/servlet-api.jar</systemPath>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<sourceDirectory>${project.basedir}/src</sourceDirectory>
		<testSourceDirectory>${project.basedir}/test</testSourceDirectory>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0-M6</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<encoding>${project.build.sourceEncoding}</encoding>
					<debug>false</debug>
					<verbose>false</verbose>
					<optimize>true</optimize>
					<showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>resources</directory>
			</resource>
		</resources>
	</build>

	<profiles>
		<profile>
			<id>mop</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<argLine>-Xmx4096m -XX:MaxPermSize=1024m</argLine>
							<argLine>-javaagent:${basedir}/JavaMOPAgent.jar</argLine>
							<runOrder>alphabetical</runOrder>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>FindSecBugs</id>
			<build>
				<plugins>
					<!-- https://spotbugs.github.io/spotbugs-maven-plugin/check-mojo.html -->
					<!-- mvn clean compile spotbugs:spotbugs -PFindSecBugs -->
					<!-- mvn spotbugs:gui -PFindSecBugs -->
					<plugin>
						<groupId>com.github.spotbugs</groupId>
						<artifactId>spotbugs-maven-plugin</artifactId>
						<version>4.6.0.0</version>
						<configuration>
							<effort>Max</effort>
							<threshold>Low</threshold>
							<xmlOutput>true</xmlOutput>
							<failOnError>false</failOnError>
							<debug>false</debug>
							<includeTests>false</includeTests>
							<spotbugsXmlOutput>true</spotbugsXmlOutput>
							<includeFilterFile>${session.executionRootDirectory}/spotbugs-security-include.xml</includeFilterFile>
							<plugins>
								<plugin>
									<groupId>com.h3xstream.findsecbugs</groupId>
									<artifactId>findsecbugs-plugin</artifactId>
									<version>1.12.0</version>
								</plugin>
							</plugins>
						</configuration>
						<executions>
							<execution>
								<goals>
									<goal>check</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>jacoco</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>0.8.8</version>
						<executions>
							<execution>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
							</execution>
							<execution>
								<id>report</id>
								<phase>test</phase>
								<goals>
									<goal>report</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<argLine>@{argLine}</argLine>
							<runOrder>alphabetical</runOrder>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
